--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,17 +47,19 @@ dependencies:
   cached_network_image: ^3.4.1
   carousel_slider: ^5.0.0
   dots_indicator: ^3.0.0
+  image_picker: ^1.1.2
   device_info_plus: ^10.1.2
   permission_handler: ^11.3.1
   infinite_scroll_pagination: ^4.0.0
   shimmer: ^3.0.0
   flutter_animate: ^4.5.0
   webview_flutter: ^4.9.0
-  dropdown_search: ^6.0.1
+  dropdown_search: ^5.0.6
   share_plus: ^10.0.2
   url_launcher: ^6.3.0
   connectivity_plus: ^6.0.5
   intl: ^0.19.0
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
